# co-affiliation-analyses

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  environment.yml  mypy.ini  pyproject.toml  requirements.txt
config/: config.toml
notebooks/: create_co_affiliation_networks.ipynb  create_co_affiliation_neworks.ipynb  create_gravity_models.ipynb  create_plots.ipynb  enrich_edges_with_travel_data.ipynb
scripts/: create_co_affiliation_networks.py  create_gravity_models.py  create_network.py  create_plots.py  create_top_performers_networks.py  enrich_edges_with_travel_data.py
src/maa/: __init__.py
src/maa/cli/: create_default_config.py  create_network.py  create_plots.py  create_top_performers_network.py  create_znib_gravity_input.py  create_znib_gravity_model.py  enrich_edges_with_travel_data.py  utils.py
src/maa/config/: __init__.py  constants.py  loader.py  models.py  registry.py  utils.py
src/maa/config/models/: input.py  output.py
src/maa/constants/: constants.py
src/maa/dataframe/models/: __init__.py  affiliation.py  article.py  route.py
src/maa/impact/: impact.py  utils.py
src/maa/network/: container.py  network.py  utils.py
src/maa/plot/: configuration.py  constants.py  grid.py  plot.py  utils.py
src/maa/routing/: routing.py
src/maa/utils/: geo_tools.py  utils.py  wrappers.py
src/maa/znib/: configuration.py  model.py  utils.py  znib.py
src/mma/: constants.py
src/mma/dataframe/models/: routes.py
src/mma/impact/: impact.py  utils.py
src/mma/network/: network.py  utils.py
src/mma/plot/: configuration.py  constants.py  grid.py  plot.py  utils.py
src/mma/routing/: routing.py
src/mma/utils/: geo_tools.py  geopd.py  utils.py  wrappers.py
src/mma/znib/: configuration.py  utils.py  znib.py
tests/: conftest.py  test_impact.py  test_network.py  test_plot.py  test_znib.py
(+2 files in other folders)
