[project]
name = "multiple-affiliation-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Christoph Schlager",email = "christophschlager@gmx.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pandera (>=0.26.1,<0.27.0)"
]

[tool.poetry]
packages = [{include = "multiple_affiliation_analysis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
