[project]
name = "multiple-affiliation-analysis"
version = "0.1.0"
description = ""
authors = [
    { name = "Christoph Schlager", email = "christoph.schlager@tuwien.ac.at" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas >=2.3.3,<3.0.0",
    "geopandas >=1.1.1,<2.0.0",
    "toml >=0.10.2,<0.11.0",
    "matplotlib >=3.10.6,<4.0.0",
    "pandera >=0.26.1,<0.27.0",
    "pydantic >=2.12.0,<3.0.0",
    "pytest >=8.4.2,<9.0.0",
    "pyarrow >=21.0.0,<22.0.0",
    "structlog >=25.4.0,<26.0.0",
    "pycountry >=24.6.1,<25.0.0",
    "tqdm >=4.67.1,<5.0.0",
    "networkx >=3.5,<4.0",
    "routingpy >=1.3.0,<2.0.0",
    "statsmodels >=0.14.5,<0.15.0",
    "scikit-learn >=1.7.2,<2.0.0",
    "seaborn >=0.13.2,<0.14.0",
    "nx2vos >=0.2,<0.3",
    "openpyxl >=3.1.5,<4.0.0",
    "click >=8.3.1,<9.0.0",
]

[project.scripts]
create-network = "maa.cli.create_network:main"
create-znib-gravity-model = "maa.cli.create_znib_gravity_model:main"
create-plots = "maa.cli.create_plots:main"

[tool.poetry]
packages = [
    { include = "maa", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
